--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -72,7 +72,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
+    <Compile Include="EventsManager.cs" />
+    <Compile Include="Diagnostics\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ServiceManager.cs" />
+    <Compile Include="TickHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
