--- a/SDK/Client/Client.csproj
+++ b/SDK/Client/Client.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{1ed39a02-e017-407d-8d32-fee8a1e29264}</Project>
-      <Name>Core</Name>
+      <Name>IgiCore.SDK.Core</Name>
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
