--- a/Plugins/Banking/Core/Core.csproj
+++ b/Plugins/Banking/Core/Core.csproj
@@ -57,12 +57,12 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Models\Models.csproj">
       <Project>{275637EC-6B60-4BD4-953C-F9596EFFE964}</Project>
-      <Name>Models</Name>
+      <Name>IgiCore.Models</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\..\..\SDK\Core\Core.csproj">
       <Project>{1ED39A02-E017-407D-8D32-FEE8A1E29264}</Project>
-      <Name>SDK</Name>
+      <Name>IgiCore.SDK.Core</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
