--- a/SDK/Core/Core.csproj
+++ b/SDK/Core/Core.csproj
@@ -41,23 +41,14 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
     <Compile Include="Diagnostics\ILogger.cs" />
     <Compile Include="Exceptions\GroupException.cs" />
-    <Compile Include="Exceptions\Guid.cs" />
+    <Compile Include="Helpers\Guid.cs" />
     <Compile Include="Exceptions\ModelException.cs" />
-    <Compile Include="Helpers\MathHelpers.cs" />
-    <Compile Include="IControllerConfiguration.cs" />
+    <Compile Include="Controllers\IControllerConfiguration.cs" />
     <Compile Include="PluginAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rpc\IConfigurableController.cs" />
-    <Compile Include="Rpc\IRpcHandler.cs" />
-    <Compile Include="Rpc\IRpcSerializer.cs" />
-    <Compile Include="Rpc\IRpcTrigger.cs" />
     <Compile Include="Rpc\RpcEvents.cs" />
-    <Compile Include="Rpc\RpcMessage.cs" />
-    <Compile Include="Rpc\RpcRequest.cs" />
-    <Compile Include="Rpc\RpcResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
