--- a/SDK/Server/Server.csproj
+++ b/SDK/Server/Server.csproj
@@ -52,19 +52,18 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\IConfiguration.cs" />
     <Compile Include="Configuration\ServerConfiguration.cs" />
-    <Compile Include="ConfigurableController.cs" />
+    <Compile Include="Controllers\ConfigurableController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rpc\ClientEvent.cs" />
-    <Compile Include="Rpc\IClientEventsManager.cs" />
-    <Compile Include="Rpc\IEventsManager.cs" />
-    <Compile Include="Controller.cs" />
+    <Compile Include="Rpc\IRpcAttach.cs" />
+    <Compile Include="Rpc\IRpcEvent.cs" />
+    <Compile Include="Rpc\IClient.cs" />
+    <Compile Include="Rpc\IRpc.cs" />
+    <Compile Include="Rpc\IRpcHandler.cs" />
+    <Compile Include="Controllers\Controller.cs" />
+    <Compile Include="Rpc\IRpcTrigger.cs" />
     <Compile Include="ServerPluginAttribute.cs" />
     <Compile Include="Storage\Contexts\EFContext.cs" />
-    <Compile Include="Storage\IStorageRegistry.cs" />
-    <Compile Include="Storage\Migrations\MigrateDatabaseToLatestVersion.cs" />
-    <Compile Include="Storage\PersistentAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj">
@@ -76,5 +75,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
