--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -59,6 +59,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Events\TickManager.cs" />
