--- a/Plugins/banking/Core/Core.csproj
+++ b/Plugins/banking/Core/Core.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Bank.cs" />
