--- a/Plugins/banking/Server/Server.csproj
+++ b/Plugins/banking/Server/Server.csproj
@@ -39,6 +39,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
