--- a/Plugins/roleplay/Server/Server.csproj
+++ b/Plugins/roleplay/Server/Server.csproj
@@ -35,6 +35,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
