Pass user to services

--- a/SDK/Client/Client.csproj
+++ b/SDK/Client/Client.csproj
@@ -61,6 +61,10 @@
     <Compile Include="Events\IEventManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Models\Models.csproj">
+      <Project>{275637ec-6b60-4bd4-953c-f9596effe964}</Project>
+      <Name>IgiCore.Models</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{1ed39a02-e017-407d-8d32-fee8a1e29264}</Project>
       <Name>IgiCore.SDK.Core</Name>
