--- a/Plugins/roleplay/Client/Client.csproj
+++ b/Plugins/roleplay/Client/Client.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExampleService.cs" />
+    <Compile Include="CharacterService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
