--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -75,7 +75,6 @@
     <Compile Include="Rpc\RpcTrigger.cs" />
     <Compile Include="Rpc\ServerHandler.cs" />
     <Compile Include="Rpc\RpcManager.cs" />
-    <Compile Include="Services\StartupService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Models\Models.csproj">
@@ -97,7 +96,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="CopyLinkedContentFiles" BeforeTargets="Build">
     <Copy SourceFiles="..\lib\System.ComponentModel.DataAnnotations.dll" DestinationFiles="..\System.ComponentModel.DataAnnotations.dll" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" />
